sumo/tests/duarouter/errors/network/edge/cedge/root__edge__cedge#id__false1/errors.duarouter
Error: At edge '1': succeding edge 'a' does not exist.
Quitting (on error).
